pricing: switch to per-wall pricing + first 10 homes promo

--- a/lime-paint.html
+++ b/lime-paint.html
@@ -220,50 +220,120 @@
     <section class="detail-content-section section-padding" id="pricing">
         <div class="container">
             <h2>Lime Wash Pricing</h2>
-            <p class="section-intro">Transparent, flat-rate pricing for HDB lime wash (walls only). No hidden costs — what you see is what you pay.</p>
+            <p class="section-intro">Per-wall pricing — only pay for what you need. Start with one feature wall and see
+                the difference.</p>
 
-            <div class="pricing-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-top: 2.5rem;">
+            <div class="pricing-grid"
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-top: 2.5rem;">
 
-                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
-                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">2-Room HDB</div>
-                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,000</div>
-                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
-                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $300 with ceiling</div>
+                <div class="pricing-card"
+                    style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div
+                        style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">
+                        Small Wall</div>
+                    <div style="font-size: 0.8rem; opacity: 0.5; margin-bottom: 0.25rem;">Up to 6 sqm</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$380</div>
+                    <div style="font-size: 0.8rem; opacity: 0.65;">e.g. bathroom, nook</div>
                 </div>
 
-                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
-                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">3-Room HDB</div>
-                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,200</div>
-                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
-                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $400 with ceiling</div>
+                <div class="pricing-card"
+                    style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div
+                        style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">
+                        Medium Wall</div>
+                    <div style="font-size: 0.8rem; opacity: 0.5; margin-bottom: 0.25rem;">Up to 12 sqm</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$680</div>
+                    <div style="font-size: 0.8rem; opacity: 0.65;">e.g. bedroom feature wall</div>
                 </div>
 
-                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
-                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">4-Room HDB</div>
-                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,500</div>
-                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
-                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $500 with ceiling</div>
+                <div class="pricing-card"
+                    style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div
+                        style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">
+                        Large Wall</div>
+                    <div style="font-size: 0.8rem; opacity: 0.5; margin-bottom: 0.25rem;">Up to 18 sqm</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$980</div>
+                    <div style="font-size: 0.8rem; opacity: 0.65;">e.g. living room feature wall</div>
                 </div>
 
-                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
-                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">5-Room HDB</div>
-                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,800</div>
-                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
-                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $600 with ceiling</div>
+                <div class="pricing-card"
+                    style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div
+                        style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">
+                        Whole House</div>
+                    <div style="font-size: 0.8rem; opacity: 0.5; margin-bottom: 0.25rem;">Full HDB / condo</div>
+                    <div style="font-size: 2rem; font-weight: 600; margin-bottom: 0.25rem;">Quote</div>
+                    <div style="font-size: 0.8rem; opacity: 0.65;">WhatsApp us for pricing</div>
                 </div>
 
             </div>
 
-            <div style="margin-top: 2rem; padding: 1.25rem 1.5rem; border-left: 3px solid var(--color-text-secondary, #a09070); background: var(--color-bg-secondary); border-radius: 0 var(--radius-sm) var(--radius-sm) 0;">
+            <div
+                style="margin-top: 2rem; padding: 1.25rem 1.5rem; border-left: 3px solid var(--color-text-secondary, #a09070); background: var(--color-bg-secondary); border-radius: 0 var(--radius-sm) var(--radius-sm) 0;">
                 <p style="margin: 0; font-size: 0.85rem; opacity: 0.8;">
                     <strong>Includes:</strong> Surface preparation, 2 coats of lime wash, material &amp; labour.<br>
-                    <strong>Excludes:</strong> Hacking, plastering, or repair of damaged walls. Rates apply to standard HDB units in good condition.<br>
+                    <strong>Excludes:</strong> Hacking, plastering, or repair of damaged walls.<br>
                     <strong>Note:</strong> Pricing is for lime wash only. Other finishes are quoted separately.
                 </p>
             </div>
 
-            <div style="text-align: center; margin-top: 2.5rem;">
-                <a href="index.html#contact" class="btn">Get a Free Quote</a>
+            <!-- First 10 Homes Promo -->
+            <div
+                style="margin-top: 3rem; border: 2px solid var(--color-text-secondary, #a09070); border-radius: var(--radius-sm); padding: 2.5rem; background: var(--color-bg-secondary); position: relative; overflow: hidden;">
+                <div
+                    style="position: absolute; top: 1rem; right: 1rem; background: var(--color-text-secondary, #a09070); color: #fff; font-size: 0.7rem; letter-spacing: 0.1em; text-transform: uppercase; padding: 0.3rem 0.75rem; border-radius: 20px;">
+                    Limited</div>
+                <div
+                    style="font-size: 0.75rem; letter-spacing: 0.15em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">
+                    Portfolio Special</div>
+                <h3 style="margin: 0 0 0.5rem; font-size: 1.5rem;">First 10 Homes — Feature Wall at $580</h3>
+                <p style="opacity: 0.75; margin-bottom: 1.5rem; font-size: 0.95rem;">We're building our portfolio and
+                    offering our best rate to early homeowners. Get a lime wash feature wall (up to 18 sqm) at 40% off
+                    our standard rate — in exchange for honest photos and a review.</p>
+
+                <div style="display: flex; align-items: center; gap: 1.5rem; flex-wrap: wrap; margin-bottom: 1.5rem;">
+                    <div style="text-align: center;">
+                        <div style="font-size: 1rem; text-decoration: line-through; opacity: 0.45;">$980</div>
+                        <div style="font-size: 2.5rem; font-weight: 700; line-height: 1;">$580</div>
+                        <div style="font-size: 0.75rem; opacity: 0.6;">1 feature wall, up to 18 sqm</div>
+                    </div>
+                    <div style="flex: 1; min-width: 160px;">
+                        <div style="font-size: 0.8rem; opacity: 0.7; margin-bottom: 0.5rem; font-weight: 600;">SPOTS
+                            REMAINING</div>
+                        <div style="display: flex; gap: 0.4rem; flex-wrap: wrap;">
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                            <span
+                                style="width:28px;height:28px;border-radius:50%;background:var(--color-text-secondary,#a09070);display:inline-block;"></span>
+                        </div>
+                        <div style="font-size: 0.75rem; opacity: 0.5; margin-top: 0.4rem;">All 10 spots still available
+                        </div>
+                    </div>
+                </div>
+
+                <a href="https://wa.me/6512345678" class="btn" target="_blank">Claim Your Spot — WhatsApp Us</a>
+            </div>
+
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="index.html#contact" class="btn"
+                    style="background: transparent; border: 1px solid currentColor; opacity: 0.7;">Get a Regular
+                    Quote</a>
             </div>
         </div>
     </section>
