design: floating nav pill, warm palette, DM Serif Display font, journal + case studies, guide, climate-guide, lookbook pages

--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&family=DM+Serif+Display:ital@0;1&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
 
     <!-- Icons -->
@@ -104,11 +104,11 @@
                 <span></span>
             </button>
 
-            <nav class="nav-links">
-                <a href="index.html#systems">Systems</a>
-                <a href="index.html#process">Process</a>
-                <a href="faq.html" class="active">FAQ</a>
-                <a href="index.html#contact" class="btn btn-small">Request Consultation</a>
+                        <nav class="nav-links">
+                <a href="systems.html">Systems</a>
+                <a href="journal.html">Journal</a>
+                <a href="faq.html">FAQ</a>
+                <a href="index.html#contact" class="btn">Consultation</a>
             </nav>
         </div>
     </header>
@@ -468,7 +468,8 @@
                 <h4>Company</h4>
                 <ul class="footer-links">
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="journal.html">Journal</a>
+                <a href="faq.html">FAQ</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
@@ -476,7 +477,7 @@
                 <h4>Connect</h4>
                 <ul class="footer-links">
                     <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-                    <li><a href="https://wa.me/6512345678" target="_blank">WhatsApp</a></li>
+                    <li><a href="https://wa.me/6598004317" target="_blank">WhatsApp</a></li>
                 </ul>
             </div>
         </div>
@@ -488,7 +489,7 @@
     </footer>
 
     <!-- Floating WhatsApp -->
-    <a href="https://wa.me/6512345678" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
+    <a href="https://wa.me/6598004317" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
         <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"><!-- Font Awesome Free 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
             <path
