--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
                             <!-- Portfolio Promo Banner -->
                             <section
-                                style="background: #000; color: #fff; padding: 2.5rem 0; border-top: 1px solid rgba(255,255,255,0.12); border-bottom: 1px solid rgba(255,255,255,0.12);">
+                                style="background: linear-gradient(135deg, #2a1f0e 0%, #1a150a 100%); color: #fff; padding: 2.75rem 0; border-top: 2px solid #c9b48a; border-bottom: 1px solid rgba(201,180,138,0.3); position: relative;">
                                 <div class="container"
                                     style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 1.5rem;">
                                     <div style="flex: 1; min-width: 260px;">
@@ -421,7 +421,7 @@
 
                             <!-- Editorial Photo Break -->
                             <div class="photo-break">
-                                <img src="assets/feature-wall.png" alt="Limewash feature wall interior">
+                                <img src="assets/lime-plaster-blue.png" alt="Blue lime plaster feature wall interior">
                                 <div class="photo-break-caption">Lime wash feature wall &mdash; Singapore residential,
                                     2024</div>
                             </div>
