fix: dark nav pill with white text always, pure black promo bar with gold border

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
                             <!-- Portfolio Promo Banner -->
                             <section
-                                style="background: linear-gradient(135deg, #2a1f0e 0%, #1a150a 100%); color: #fff; padding: 2.75rem 0; border-top: 2px solid #c9b48a; border-bottom: 1px solid rgba(201,180,138,0.3); position: relative;">
+                                style="background: #000; color: #fff; padding: 2.75rem 0; border-top: 2px solid #c9b48a; border-bottom: 1px solid rgba(201,180,138,0.15);">
                                 <div class="container"
                                     style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 1.5rem;">
                                     <div style="flex: 1; min-width: 260px;">
