fix: add missing card images to lime-plaster, liquid-metal, patina pages; fix Vertigris typo; new patina+zinc images

--- a/lime-plaster.html
+++ b/lime-plaster.html
@@ -82,7 +82,7 @@
                 <span></span>
             </button>
 
-                        <nav class="nav-links">
+            <nav class="nav-links">
                 <a href="systems.html">Systems</a>
                 <a href="journal.html">Journal</a>
                 <a href="faq.html">FAQ</a>
@@ -131,8 +131,11 @@
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/plaster-stone-texture.png" alt="Textured Mineral Plaster Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Textured Mineral Plaster</h3>
-                    <p>A coarser blend designed for pronounced texture and character.</p>
+                    <p>A coarser blend designed for pronounced texture and character. Best for feature walls where raw
+                        materiality is the intent.</p>
                 </div>
             </div>
         </div>
@@ -238,7 +241,8 @@
                 <ul class="footer-links">
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="journal.html">Journal</a>
-                <a href="faq.html">FAQ</a></li>
+                        <a href="faq.html">FAQ</a>
+                    </li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
