--- a/liquid-metal.html
+++ b/liquid-metal.html
@@ -122,19 +122,25 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
-                    <h3>Bronze & Brass</h3>
+                    <img src="assets/liquid-metal-hero.png" alt="Bronze and Brass Liquid Metal Finish"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
+                    <h3>Bronze &amp; Brass</h3>
                     <p>Classic warm metals that develop deep, rich patinas over time. From polished gold tones to aged
                         chocolate browns.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="assets/liquid-metal-detail.png" alt="Copper Liquid Metal Finish"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Copper</h3>
                     <p>Highly reactive and expressive. Can be left to age naturally or treated to develop iconic green
                         verdigris effects.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <h3>Zinc & Stainless</h3>
+                    <img src="images/liquid-metal-zinc.png" alt="Zinc and Stainless Liquid Metal Finish"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
+                    <h3>Zinc &amp; Stainless</h3>
                     <p>Cooler, contemporary metals providing a sleek, industrial aesthetic with subtle tonal
                         transitions.</p>
                 </div>
@@ -148,19 +154,25 @@
             <h2>Application Techniques</h2>
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="assets/liquid-metal-detail.png" alt="Smooth Troweled Liquid Metal Application"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Smooth Troweled</h3>
                     <p>Multiple layers compressed to create a seamless, semi-polished metal surface that feels cold to
                         the touch.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <h3>Textured & Raked</h3>
+                    <img src="images/liquid-metal-zinc.png" alt="Textured and Raked Liquid Metal Application"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
+                    <h3>Textured &amp; Raked</h3>
                     <p>Introducing architectural depth through directional raking or deliberate surface irregularities.
                     </p>
                 </div>
 
                 <div class="option-card-large">
-                    <h3>Poured & Cast</h3>
+                    <img src="assets/mural-graphics.png" alt="Poured and Cast Liquid Metal Application"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
+                    <h3>Poured &amp; Cast</h3>
                     <p>Resin-based metal systems used for seamless furniture, joinery, and sculptural elements.</p>
                 </div>
             </div>
@@ -236,7 +248,8 @@
                 <ul class="footer-links">
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="journal.html">Journal</a>
-                <a href="faq.html">FAQ</a></li>
+                        <a href="faq.html">FAQ</a>
+                    </li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
