--- a/patina-oxidised.html
+++ b/patina-oxidised.html
@@ -121,18 +121,24 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
-                    <h3>Rust & Corten Effects</h3>
+                    <img src="images/patina-rust-corten.png" alt="Rust and Corten Patina Effect"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
+                    <h3>Rust &amp; Corten Effects</h3>
                     <p>Iron-based systems that develop authentic rust textures. Available in various stages of oxidation
                         from light orange to deep charred reds.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <h3>Vertigris & Verdigrease</h3>
+                    <img src="images/patina-verdigris.png" alt="Verdigris Copper Patina Effect"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
+                    <h3>Verdigris (Copper Patina)</h3>
                     <p>Copper and bronze oxidation creating iconic blue-green mineral deposits. Best for architectural
-                        accents and exterior features.</p>
+                        accents and statement features.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/patina-mottled.png" alt="Mottled Mineral Patina Effect"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Mottled Patinas</h3>
                     <p>Multi-layered mineral washes applied to metallic bases to create depth, clouding, and aged
                         variations without full oxidation.</p>
@@ -210,7 +216,8 @@
                 <ul class="footer-links">
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="journal.html">Journal</a>
-                <a href="faq.html">FAQ</a></li>
+                        <a href="faq.html">FAQ</a>
+                    </li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
