fix: correct all 6 liquid-metal card images — unique images per material and technique

--- a/liquid-metal.html
+++ b/liquid-metal.html
@@ -130,7 +130,7 @@
                 </div>
 
                 <div class="option-card-large">
-                    <img src="assets/liquid-metal-detail.png" alt="Copper Liquid Metal Finish"
+                    <img src="images/liquid-metal-copper.png" alt="Copper Liquid Metal Finish"
                         style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Copper</h3>
                     <p>Highly reactive and expressive. Can be left to age naturally or treated to develop iconic green
@@ -154,7 +154,7 @@
             <h2>Application Techniques</h2>
             <div class="option-grid-large">
                 <div class="option-card-large">
-                    <img src="assets/liquid-metal-detail.png" alt="Smooth Troweled Liquid Metal Application"
+                    <img src="images/liquid-metal-smooth-troweled.png" alt="Smooth Troweled Liquid Metal Application"
                         style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Smooth Troweled</h3>
                     <p>Multiple layers compressed to create a seamless, semi-polished metal surface that feels cold to
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="option-card-large">
-                    <img src="images/liquid-metal-zinc.png" alt="Textured and Raked Liquid Metal Application"
+                    <img src="images/liquid-metal-textured-raked.png" alt="Textured and Raked Liquid Metal Application"
                         style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Textured &amp; Raked</h3>
                     <p>Introducing architectural depth through directional raking or deliberate surface irregularities.
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="option-card-large">
-                    <img src="assets/mural-graphics.png" alt="Poured and Cast Liquid Metal Application"
+                    <img src="images/liquid-metal-poured-cast.png" alt="Poured and Cast Liquid Metal Application"
                         style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Poured &amp; Cast</h3>
                     <p>Resin-based metal systems used for seamless furniture, joinery, and sculptural elements.</p>
